@@ -1,0 +1,9 @@
+package org.apache.cayenne.testdo.inheritance_vertical;
+
+import org.apache.cayenne.testdo.inheritance_vertical.auto._IvAbstract;
+
+public class IvAbstract extends _IvAbstract {
+
+    private static final long serialVersionUID = 1L; 
+
+}
