@@ -1,0 +1,9 @@
+package org.apache.cayenne.testdo.inheritance_vertical;
+
+import org.apache.cayenne.testdo.inheritance_vertical.auto._IvConcrete;
+
+public class IvConcrete extends _IvConcrete {
+
+    private static final long serialVersionUID = 1L; 
+
+}
