@@ -1,6 +1,7 @@
 package org.apache.cayenne.testdo.inheritance_vertical.auto;
 
 import org.apache.cayenne.CayenneDataObject;
+import org.apache.cayenne.exp.Property;
 
 /**
  * Class _Iv1Root was generated by Cayenne.
@@ -10,23 +11,25 @@ import org.apache.cayenne.CayenneDataObject;
  */
 public abstract class _Iv1Root extends CayenneDataObject {
 
-    public static final String DISCRIMINATOR_PROPERTY = "discriminator";
-    public static final String NAME_PROPERTY = "name";
+    private static final long serialVersionUID = 1L; 
 
     public static final String ID_PK_COLUMN = "ID";
 
+    public static final Property<String> DISCRIMINATOR = new Property<String>("discriminator");
+    public static final Property<String> NAME = new Property<String>("name");
+
     public void setDiscriminator(String discriminator) {
-        writeProperty(DISCRIMINATOR_PROPERTY, discriminator);
+        writeProperty("discriminator", discriminator);
     }
     public String getDiscriminator() {
-        return (String)readProperty(DISCRIMINATOR_PROPERTY);
+        return (String)readProperty("discriminator");
     }
 
     public void setName(String name) {
-        writeProperty(NAME_PROPERTY, name);
+        writeProperty("name", name);
     }
     public String getName() {
-        return (String)readProperty(NAME_PROPERTY);
+        return (String)readProperty("name");
     }
 
 }
