@@ -1,6 +1,7 @@
 package org.apache.cayenne.testdo.inheritance_vertical.auto;
 
 import org.apache.cayenne.CayenneDataObject;
+import org.apache.cayenne.exp.Property;
 
 /**
  * Class _Iv2Root was generated by Cayenne.
@@ -10,15 +11,17 @@ import org.apache.cayenne.CayenneDataObject;
  */
 public abstract class _Iv2Root extends CayenneDataObject {
 
-    public static final String DISCRIMINATOR_PROPERTY = "discriminator";
+    private static final long serialVersionUID = 1L; 
 
     public static final String ID_PK_COLUMN = "ID";
 
+    public static final Property<String> DISCRIMINATOR = new Property<String>("discriminator");
+
     public void setDiscriminator(String discriminator) {
-        writeProperty(DISCRIMINATOR_PROPERTY, discriminator);
+        writeProperty("discriminator", discriminator);
     }
     public String getDiscriminator() {
-        return (String)readProperty(DISCRIMINATOR_PROPERTY);
+        return (String)readProperty("discriminator");
     }
 
 }
