@@ -10,7 +10,9 @@ import org.apache.cayenne.CayenneDataObject;
  */
 public abstract class _Iv2X extends CayenneDataObject {
 
+    private static final long serialVersionUID = 1L; 
 
     public static final String ID_PK_COLUMN = "ID";
+
 
 }
