@@ -1,30 +1,27 @@
 package org.apache.cayenne.testdo.inheritance_vertical.auto;
 
+import org.apache.cayenne.CayenneDataObject;
 import org.apache.cayenne.exp.Property;
-import org.apache.cayenne.testdo.inheritance_vertical.Iv2Root;
-import org.apache.cayenne.testdo.inheritance_vertical.Iv2X;
 
 /**
- * Class _Iv2Sub1 was generated by Cayenne.
+ * Class _IvAbstract was generated by Cayenne.
  * It is probably a good idea to avoid changing this class manually,
  * since it may be overwritten next time code is regenerated.
  * If you need to make any customizations, please use subclass.
  */
-public abstract class _Iv2Sub1 extends Iv2Root {
+public abstract class _IvAbstract extends CayenneDataObject {
 
     private static final long serialVersionUID = 1L; 
 
     public static final String ID_PK_COLUMN = "ID";
 
-    public static final Property<Iv2X> X = new Property<Iv2X>("x");
+    public static final Property<String> TYPE = new Property<String>("type");
 
-    public void setX(Iv2X x) {
-        setToOneTarget("x", x, true);
+    public void setType(String type) {
+        writeProperty("type", type);
     }
-
-    public Iv2X getX() {
-        return (Iv2X)readProperty("x");
+    public String getType() {
+        return (String)readProperty("type");
     }
-
 
 }
