@@ -1,0 +1,53 @@
+package org.apache.cayenne.testdo.inheritance_vertical.auto;
+
+import java.util.List;
+
+import org.apache.cayenne.exp.Property;
+import org.apache.cayenne.testdo.inheritance_vertical.IvAbstract;
+import org.apache.cayenne.testdo.inheritance_vertical.IvConcrete;
+
+/**
+ * Class _IvConcrete was generated by Cayenne.
+ * It is probably a good idea to avoid changing this class manually,
+ * since it may be overwritten next time code is regenerated.
+ * If you need to make any customizations, please use subclass.
+ */
+public abstract class _IvConcrete extends IvAbstract {
+
+    private static final long serialVersionUID = 1L; 
+
+    public static final String ID_PK_COLUMN = "ID";
+
+    public static final Property<String> NAME = new Property<String>("name");
+    public static final Property<List<IvConcrete>> CHILDREN = new Property<List<IvConcrete>>("children");
+    public static final Property<IvConcrete> PARENT = new Property<IvConcrete>("parent");
+
+    public void setName(String name) {
+        writeProperty("name", name);
+    }
+    public String getName() {
+        return (String)readProperty("name");
+    }
+
+    public void addToChildren(IvConcrete obj) {
+        addToManyTarget("children", obj, true);
+    }
+    public void removeFromChildren(IvConcrete obj) {
+        removeToManyTarget("children", obj, true);
+    }
+    @SuppressWarnings("unchecked")
+    public List<IvConcrete> getChildren() {
+        return (List<IvConcrete>)readProperty("children");
+    }
+
+
+    public void setParent(IvConcrete parent) {
+        setToOneTarget("parent", parent, true);
+    }
+
+    public IvConcrete getParent() {
+        return (IvConcrete)readProperty("parent");
+    }
+
+
+}
